C++-annotations (9.8.0)

  * Added a section about static polymorphism to the class templates chapter

  * Removed the `text to anything convertor' section, which is now obsoleted
    by existing std::string conversion functions.

  * Removed the C++11 labels from section headers, as the C++11 standard has
    been implemented by g++ 4.8.2. Note that the --std=c++11 compiler flag is
    still required.

  * Several typos were fixed

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 18 Jan 2014 13:55:37 +0100

C++-annotations (9.7.3)

  * Fixed several typos.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 21 Aug 2013 15:00:30 +0200

C++-annotations (9.7.2)

  * Repaired some minor flaws, which were still waiting to be processed.

  * Added for internal use steps to create a Kindle version of the Annotations
    (see also http://www.amazon.com, look for ('c++ annotations')

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 30 May 2013 12:45:58 +0200

C++-annotations (9.7.1)

  * Added changes of 9.7.0 to the Annotations' `what's new' section

  * Release 9.7.0 was not published as a separate release.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 30 May 2013 09:43:34 +0200

C++-annotations (9.7.0)

  * Added several new sections about time specification (stl/time, etc.)

  * Added new section about 'this_thread' (stl/thisthread)

  * Added new section about locks (stl/locks)

  * Added new section (classes/ambiguity) about Ambiguity Resolution.

  * Added new section 'system_error' (exception/systemerror)

  * Added new section 'the class `error category'' (exception/errorcategory)

  * Added new section 'the class `error code'' (exception/errorcode)

  * Rewrote all sections about multi-threading)

  * Rewrote the section about lamba expressions

  * Replaced references to `ascii-z string' by `null terminated byte string'
    (NTBS), following the C++11 standard's terminology.

  * Repaired flaws in function names and return tyes of several sto* functions