@@ -1,7 +1,3 @@
-Explain how to define a const_reverse_iterator (define Type const &reference)
-        also: operator-- can be private by defining
-        std::reverse_iterator<iterator<Type>> a friend of iterator<Type>
-
 Explain how to declare a function template for the current template type as
 friend: 
     template <typename Type>
