@@ -1,2 +1,2 @@
-SUBST(DOCVERSION)(9.8.0)
+SUBST(DOCVERSION)(9.8.1)
 SUBST(YEARS)(1994 - 2014)
