@@ -1,3 +1,13 @@
+C++-annotations (9.8.1)
+
+  * Added explanatory paragraphs about using static_casts to derived classes
+    using shared_ptr or unique_ptr objects to base classes
+
+  * Added explanatory paragraphs about defining (const_)iterators and
+    (const_)reverse_iterators. 
+
+
+
 C++-annotations (9.8.0)
 
   * Added a section about static polymorphism to the class templates chapter
